--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,16 @@ body {
   background-color: #0f0e17;
   color: white;
 }
+.intro {
+    font-size: 15px;
+    margin: 10px; 
+    line-height: 25px;
+}
+.cita{
+    background-color: rgb(42, 42, 42);
+    border: 2px solid black;
+    border-radius: 10px;
+}
 nav ul {
   display: flex;
   justify-content: space-between;
@@ -57,17 +67,63 @@ h1 {
 ol {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   padding: 10px;
-  width: 100vw;
+  /* width: 100vw; */
   list-style: none;
+  gap: 10px;
   > li > figure > .zapa {
     width: 300px;
     height: auto;
-    
 
- 
   }
 }
+.flip-container {
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    border-radius: 40px;
+    perspective: 1000px; 
+  }
+  .card {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    border-radius: 40px;
+  }
+  .flip-container:hover .card {
+    transform: rotateY(180deg);
+  }
+  .front, .back {
+    position: absolute;
+    border: 2px solid rgb(0, 0, 0);
+    
+    width: 100%;
+    border-radius: 40px;
+    height: 100%;
+    backface-visibility: hidden;
+    display: flex;
+    justify-content: center;
+    font-size: 5rem;
+    background: linear-gradient(crimson, rgb(63, 11, 21));
+  }
+  .front {
+    background: linear-gradient(rgb(63, 11, 21), crimson);
+    border-radius: 40px;
+    color: #fff;
+       
+  }
+  .back {
+    background-color: #00000000;
+    color: white;
+    transform: rotateY(180deg);
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+  }
 figure {
   display: flex;
   position: relative;
@@ -85,8 +141,12 @@ iframe {
   width: 768px;
   height: 300px;
 }
-textarea {
+/* textarea {
   min-width: 100%;
+
+} */
+#Formulario_de_contacto{
+    width: 100%;
 }
 
 .iframe_section {
