feat animacion nav

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,87 @@
     width: 40%;
   }
 }
+nav ul {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    gap: 2rem;
+    padding: 0px;
+    margin: 0px;
+    background: linear-gradient(crimson, rgb(63, 11, 21));
+    width: 100%;
+    height: 45px;
+    flex-wrap: wrap;
+  }
+  nav a {
+    text-decoration: none;
+    font-size: 25px;
+    color: black;
+    padding: 5px 10px;
+  }
+  .nav {
+      text-transform: uppercase;
+      text-align: center;
+      font-weight: 600;
+    }
+    
+    .nav * {
+      box-sizing: border-box;
+      transition: all .35s ease;
+    }
+    
+    .nav li {
+      display: inline-block;
+      list-style: outside none none;
+      margin: .5em 1em;
+      padding: 0;
+    }
+    
+    .nav a {
+      padding: .5em .8em;
+      color: rgba(0, 0, 0, 0.76);
+      position: relative;
+      text-decoration: none;
+      font-size: 20px;
+    }
+    
+    .nav a::before,
+    .nav a::after {
+      content: '';
+      height: 14px;
+      width: 14px;
+      position: absolute;
+      transition: all .35s ease;
+      opacity: 0;
+    }
+    
+    .nav a::before {
+      content: '';
+      right: 0;
+      top: 0;
+      border-top: 3px solid black;
+      border-right: 3px solid black;
+      transform: translate(-100%, 50%);
+    }
+    
+    .nav a:after {
+      content: '';
+      left: 0;
+      bottom: 0;
+      border-bottom: 3px solid black;
+      border-left: 3px solid black;
+      transform: translate(100%, -50%)
+    }
+    
+    .nav a:hover:before,
+    .nav a:hover:after{
+      transform: translate(0,0);
+      opacity: 1;
+    }
+    
+    .nav a:hover {
+      color: white;
+    }
 
 body {
   margin: 0;
@@ -30,34 +111,7 @@ body {
     margin: 10px; 
     line-height: 25px;
 }
-.cita{
-    background-color: rgb(42, 42, 42);
-    border: 2px solid black;
-    border-radius: 10px;
-}
-nav ul {
-  display: flex;
-  justify-content: space-between;
-  list-style: none;
-  gap: 2rem;
-  padding: 0px;
-  margin: 0;
-  background: linear-gradient(crimson, rgb(63, 11, 21));
-  width: 100%;
-  height: auto;
-  flex-wrap: wrap;
-}
-nav a {
-  text-decoration: none;
-  font-size: 25px;
-  color: black;
-  padding: 5px 10px;
-}
 
-nav a:hover {
-  background: linear-gradient(rgb(63, 11, 21), crimson);
-  border-radius: 5px;
-}
 
 h1 {
   display: flex;
@@ -69,7 +123,6 @@ ol {
   flex-wrap: wrap;
   justify-content: center;
   padding: 10px;
-  /* width: 100vw; */
   list-style: none;
   gap: 10px;
   > li > figure > .zapa {
@@ -141,10 +194,7 @@ iframe {
   width: 768px;
   height: 300px;
 }
-/* textarea {
-  min-width: 100%;
 
-} */
 #Formulario_de_contacto{
     width: 100%;
 }
@@ -160,6 +210,7 @@ iframe {
     align-items: center;
     gap: 1rem;
     padding: 10px;
+
   }
   #logo_airmax {
     display: flex;
