--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
 
 nav ul {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   list-style: none;
   gap: 2rem;
   padding: 0px;
@@ -137,6 +137,9 @@ h1{
 
 h2,h3 {
   font-size: 25px;
+}
+h3{
+  margin-top: 100px;
 }
 
 ol {
